--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a software developer...</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p> I was born in Ethiopia but grew up in San Diego, California...</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p> I love to travel and see new places, love to fly aircrafts as an hobbie...</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p> To be software engineer...</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Denver, Colorado ...</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I always been passionate about computers ...</p>
     </section>
 
     <footer id="footer">
